@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  Copyright 2010-2022 BusinessCode GmbH, Germany
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+  http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+  -->
 <BindingSet id="bcd_docUpload"  table="bcd_virtualFileSystem" xmlns="http://www.businesscode.de/schema/bcdui/bindings-1.0.0">
 
   <C id="path"        isKey="true"  type-name="VARCHAR"> <Column>path</Column>          </C>
@@ -27,7 +42,7 @@
   <WriteProcessing>
     <Callbacks>
       <Callback class="de.businesscode.bcdui.binding.write.WrsModificationCallback">
-        <Param bindingItemId="lastUpdate" expression="${bcdBean.creationStamp}" isCoalesce="false"/>
+        <Param bindingItemId="lastUpdate" expression="${bcdBean.currentTimestampUtc}" isCoalesce="false"/>
         <Param bindingItemId="updatedBy" expression="${bcdBean.userName}" isCoalesce="false" />
         <Param bindingItemId="isServer" expression="0" isCoalesce="false"/>
       </Callback>
