@@ -25,6 +25,7 @@ and needs also to be updated sql expression strings compiled with SQLEngine::tra
 ** TextToUrl servlet returns found value in an XML element now
 ** removed SubjectSettingsFilter, SessionAttributesManager, SessionAttribute servlet, bcdui.config.security, client sided setting is done now via SubjectPreferences with bcdui/conf/subjectPreferences.xml as config.
 * ensure adding bcd_userId:userId and bcd_i18n:lang to subjectSettings.xml
+* removed bcdBean creationStamp, use bcdBean.currentTimestampUtc instead which is the date string in UTC timezone
 
 .Server:
 * Wrq does support CTE common table expressions, joins and unions now
